# cernels

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  HANDOFF.md  README.md  RULES.md  pyproject.toml
.issues/: 01-megablocks-moe.md  01-paged-attention.md  02-kornia-gaussian-blur.md  02-sage-attention.md  03-mamba-ssm.md  03-primus-3d-rope.md  04-deformable-attention.md  04-rwkv.md  05-causal-conv1d.md  06-megablocks-moe.md  07-fp8-quant-matmul.md  07-roi-align.md  08-gptq-quant.md  09-custom-fused-rmsnorm.md  10-dsa-lightning-indexer.md  11-native-sparse-attention.md  12-minimax-block-sparse.md  13-mxfp4-gemm.md  14-sage-attention3-fp4.md  15-muon-newton-schulz.md  16-fused-linear-cross-entropy.md  17-nms.md  18-topk-gather-select.md  19-unique-nonzero-compaction.md  20-scatter-segment-reduce.md  21-sort-argsort-cumsum.md  22-sparse-spmm-blocksparse.md  23-ragged-varlen-bmm.md  24-sequence-decode-ctc-beam.md  25-deformable-attention-roialign.md  26-fused-qknorm-rope-attention.md  27-sliding-window-attention.md  28-csa-compressed-sparse-attention.md  29-hca-heavily-compressed-attention.md  30-mla-multi-latent-attention.md  31-cross-layer-shared-kv-attention.md  32-dual-rope.md  33-mhc-hyper-connections.md  34-gdn-global-dense-norm.md  35-finegrained-moe.md  (+6 more)
docs/: list.md
docs/guide/: correctness.md  how_to_add_a_config.md  how_to_add_a_custom_kernel.md  profiling_on_spark.md  running_benchmarks.md  setting_up_baselines.md
scripts/: build_kernels.sh  check_naming.py  transfer.sh
skills/implement-kernel/: SKILL.md
skills/profile-model/: SKILL.md
src/benchmark/: README.md  __init__.py  main.py  monitor.py  save.py  view.py
src/configs/: README.md  base.py  helpers.py  (+4 more)
(+252 files in other folders)
