[project]
name = "kernels-dataset"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=5.0.0",
    "huggingface-hub>=1.18.0",
    "kernels>=0.15.2",
    "rich>=15.0.0",
    "tabulate>=0.10.0",
    "torch>=2.12.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyrefly>=1.0.0",
    "ruff>=0.15.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchmark", "src/configs", "src/dataset"]

[tool.ruff]
line-length = 120

[tool.pyrefly]
project-includes = ["src"]
