[project]
name = "kernels-dataset"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=5.0.0",
    "huggingface-hub>=1.18.0",
    "kernels>=0.15.2",
    "ninja>=1.11.0",
    "rich>=15.0.0",
    "tabulate>=0.10.0",
    "torch>=2.12.0",
    "tqdm>=4.68.1",
    "transformers>=5.10.2",
]

[project.optional-dependencies]
# Baseline libraries used only by benchmark configs (torchvision: nms/roi_align; kornia: gaussian_blur).
# Install with `uv sync --extra benchmark` on the machine that runs benchmarks (the Spark).
benchmark = [
    "kornia>=0.8.3",
    "torchvision>=0.27.0",
]

[dependency-groups]
dev = [
    "clang-format>=22.1.5",
    "prek>=0.4.4",
    "pyrefly>=1.0.0",
    "ruff>=0.15.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchmark", "src/configs", "src/dataset", "src/kops"]

[tool.ruff]
line-length = 120

[tool.pyrefly]
project-includes = ["src"]
